--- a/index.html
+++ b/index.html
@@ -13,7 +13,23 @@
 </head>
 <body>
     <header class="container">
+        <div class="landing">
+            <h1>BHROMAON</h1>
+            <h2>Safe Travel Anywhere</h2>
+
+            <form>
+                <input type="search" id="search" name="search" placeholder="Search Your Travel Destination">
+                <button>Search <i class="fa-solid fa-magnifying-glass"></i></button>
+            </form>
+
+
+
+
+        </div>
         <nav>
+            <div class="logo">
+                <h3>BHROMAON</h3>
+            </div>
             <ul>
                 <li><a href="#">Who we are</a></li>
                 <li><a href="#">What we do</a></li>
