--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 
 </head>
 <body>
-    <header class="container">
-        <div class="landing">
+    <header class="container landing-page">
+        <div class="landing-info">
             <h1>BHROMAON</h1>
             <h2>Safe Travel Anywhere</h2>
 
-            <form>
+            <form class="landing-search">
                 <input type="search" id="search" name="search" placeholder="Search Your Travel Destination">
                 <button>Search <i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
-
-
-
-
+        </div>
+        <div>
+            <h4>Scroll down</h4>
+            <h4><i class="fa-solid fa-angle-down"></i></h4>
         </div>
         <nav>
             <div class="logo">
