--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="Styles/index.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <script src="https://kit.fontawesome.com/a0990c18c2.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aleo&family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -22,7 +25,7 @@
                 <button>Search <i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
         </div>
-        <div>
+        <div class="scroll">
             <h4>Scroll down</h4>
             <h4><i class="fa-solid fa-angle-down"></i></h4>
         </div>
