--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
         </nav>
     </header>
     <main>
+        <section class="container choose">
+            <div class="choose1">
+
+
+            </div>
+            <div class="choose2">
+
+            </div>
+
+        </section>
 
     </main>
     <footer>
