--- a/index.html
+++ b/index.html
@@ -44,6 +44,17 @@
     <main>
         <section class="container choose">
             <div class="choose1">
+                <div class="choose-text">
+                    <h2>Why Choose Us</h2>
+                    <p> Tion and dislike men who are so beguiled and demoralized by desire by the charms 
+                        of pleasure of the moment, so blinded by desire, that they cannot foresee </p>
+                    <p>Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that.</p>
+                    <button>Explore places</button>
+                </div>
+                <div class="choose-images">
+                    <img src="images/hutbywater.png" alt="A hut by the water">
+                    <img src="images/mountainlandscape.png" alt="A Mountain landscape">
+                </div>
 
 
             </div>
