--- a/index.html
+++ b/index.html
@@ -55,11 +55,28 @@
                     <img src="images/hutbywater.png" alt="A hut by the water">
                     <img src="images/mountainlandscape.png" alt="A Mountain landscape">
                 </div>
-
-
             </div>
             <div class="choose2">
+                <!-- icons -->
+            </div>
+        </section>
+        <section class="container spain">
+            <div class="spain_1">
+                <div class="spain_info">
+                    <h3>Spain</h3>
+                    <h2>Grand Spain Madrid</h2>
+                    <p>But I must explain to you how all this mistaken idea of 
+                        account to denouncing pleasure and praising pain was account  
+                        born and I account will give you a complete account of the system
+                    </p>
+                    <button class="button">Book now</button>
 
+                </div>
+            </div>
+            <div class="spain_2">
+                <div class="spain_info">
+
+                </div>
             </div>
 
         </section>
