--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-    <header class="container landing-page">
+    <section class="container landing-page">
         <div class="landing-info">
             <h1>BHROMAON</h1>
             <h2>Safe Travel Anywhere</h2>
@@ -40,7 +40,7 @@
                 <li><a href="#">Contact us</a></li>
             </ul>
         </nav>
-    </header>
+    </section>
     <main>
         <section class="container choose">
             <div class="choose1">
@@ -75,6 +75,14 @@
             </div>
             <div class="spain_2">
                 <div class="spain_info">
+                    <h3>Spain</h3>
+                    <h2>Grand Spain Madrid</h2>
+                    <p>But I must explain to you how all this mistaken 
+                        idea of account to denouncing pleasure and 
+                        praising pain was account  born and I account will 
+                        give you a complete account of the system
+                    </p>
+                    <button class="button">Book now</button>
 
                 </div>
             </div>
