--- a/index.html
+++ b/index.html
@@ -12,9 +12,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aleo&family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
-
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="logo">
+                <h3>BHROMAON</h3>
+            </div>
+            <ul>
+                <li><a href="#">Who we are</a></li>
+                <li><a href="#">What we do</a></li>
+                <li><a href="#">Travel with us</a></li>
+                <li><a href="#">Contact us</a></li>
+            </ul>
+        </nav>
+    </header>
     <section class="container landing-page">
         <div class="landing-info">
             <h1>BHROMAON</h1>
@@ -29,17 +41,6 @@
             <h4>Scroll down</h4>
             <h4><i class="fa-solid fa-angle-down"></i></h4>
         </div>
-        <nav>
-            <div class="logo">
-                <h3>BHROMAON</h3>
-            </div>
-            <ul>
-                <li><a href="#">Who we are</a></li>
-                <li><a href="#">What we do</a></li>
-                <li><a href="#">Travel with us</a></li>
-                <li><a href="#">Contact us</a></li>
-            </ul>
-        </nav>
     </section>
     <main>
         <section class="container choose">
@@ -86,6 +87,14 @@
 
                 </div>
             </div>
+        </section>
+        <section class="container what">
+            <div>
+                <h2>What Our Tourists Say</h2>
+            </div>
+
+
+
 
         </section>
 
