--- a/index.html
+++ b/index.html
@@ -89,18 +89,25 @@
             </div>
         </section>
         <section class="container what">
-            <div>
+            <div class="what_heading">
                 <h2>What Our Tourists Say</h2>
             </div>
-
-
-
-
+            <div class="what_content">
+                <div class="what_image">
+                    <img src="Images/Tourist.png" alt="Tourist">
+                </div>
+                <div class="what_info">
+                    <h4>Sam Sumon</h4>
+                    <p><i class="fa-solid fa-quote-left"></i>But I must explain to you how all this mistaken idea of account to denouncinpleasure and praising pain  But I must explain to you how all this mistaken idea of account to nai denouncing pleasure and praising pain was account  
+                        born and I account will give you a complete account of the system was account  born and I account will give you a nai the complete account of the system</p>
+                </div>
+            </div>
         </section>
 
     </main>
     <footer>
-
+        <h2>BHROMAON</h2>
+        <h3>Safe Travel Anywhere</h3>
     </footer>
     
 </body>
