--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <div class="logo">
-                <h3>BHROMAON</h3>
+                <h3><a href="#">BHROMAON</a></h3>
             </div>
             <ul>
                 <li><a href="#">Who we are</a></li>
@@ -50,7 +50,7 @@
                     <p> Tion and dislike men who are so beguiled and demoralized by desire by the charms 
                         of pleasure of the moment, so blinded by desire, that they cannot foresee </p>
                     <p>Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that.</p>
-                    <button>Explore places</button>
+                    <button class="button">Explore places</button>
                 </div>
                 <div class="choose-images">
                     <img src="images/hutbywater.png" alt="A hut by the water">
@@ -58,7 +58,19 @@
                 </div>
             </div>
             <div class="choose2">
-                <!-- icons -->
+                <div class="search">
+                   <a href="#"><img src="Images/icon-glass.png" alt="looking glass">
+                    <h2>Search Places</h2></a>
+
+                </div>
+                <div class="check">
+                    <a href="#"><img src="Images/icon-check.png" alt="">
+                    <h2>Select Places</h2></a>
+                </div>
+                <div class="thumb">
+                    <a href="#"><img src="Images/icon-thumb.png" alt="">
+                    <h2>Book & Enjoy</h2></a>
+                </div>
             </div>
         </section>
         <section class="container spain">
