--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2>Safe Travel Anywhere</h2>
 
             <form class="landing-search">
-                <input type="search" id="search" name="search" placeholder="Search Your Travel Destination">
+                <input type="search" id="search" name="search" placeholder="Search Your Travel Destination" autofocus>
                 <button>Search <i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
         </div>
