--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         </section>
         <section class="container spain">
             <div class="spain_1">
+                <div class="spain-content">
                 <div class="spain_info">
                     <h3>Spain</h3>
                     <h2>Grand Spain Madrid</h2>
@@ -83,7 +84,7 @@
                         born and I account will give you a complete account of the system
                     </p>
                     <button class="button">Book now</button>
-
+                </div>
                 </div>
             </div>
             <div class="spain_2">
@@ -118,8 +119,8 @@
 
     </main>
     <footer>
-        <h2>BHROMAON</h2>
-        <h3>Safe Travel Anywhere</h3>
+        <a href="#"><h2>BHROMAON</h2>
+        <h3>Safe Travel Anywhere</h3></a>
     </footer>
     
 </body>
