layout info-box

--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
                 </div>
             </div>
             <div class="spain_2">
+                <div class="spain-content2"></div>
+                <div class="spain-content3">
                 <div class="spain_info">
                     <h3>Spain</h3>
                     <h2>Grand Spain Madrid</h2>
@@ -97,7 +99,7 @@
                         give you a complete account of the system
                     </p>
                     <button class="button">Book now</button>
-
+                </div>
                 </div>
             </div>
         </section>
