--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </nav>
     </header>
-    <section class="container landing-page">
+    <section class="container landing-page" id="top" >
         <div class="landing-info">
             <h1>BHROMAON</h1>
             <h2>Safe Travel Anywhere</h2>
@@ -38,8 +38,10 @@
             </form>
         </div>
         <div class="scroll">
-            <h4>Scroll down</h4>
-            <h4><i class="fa-solid fa-angle-down"></i></h4>
+            <a href="#what">
+                <h4>Scroll down</h4>
+                <h4><i class="fa-solid fa-angle-down"></i></h4>
+            </a>
         </div>
     </section>
     <main>
@@ -103,7 +105,7 @@
                 </div>
             </div>
         </section>
-        <section class="container what">
+        <section class="container what" id="what">
             <div class="what_heading">
                 <h2>What Our Tourists Say</h2>
             </div>
@@ -121,7 +123,7 @@
 
     </main>
     <footer>
-        <a href="#"><h2>BHROMAON</h2>
+        <a href="#top"><h2>BHROMAON</h2>
         <h3>Safe Travel Anywhere</h3></a>
     </footer>
     
